[package]
name = "llm-execute-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = "1.0.145"
serde_json = "1.0.85"
derive_more = "0.99.17"
crossbeam-channel = "0.5.7"
log = "0.4.20"
env_logger = "0.10.0"
